--- a/KwikMart_DesktopApp/Registration.xaml
+++ b/KwikMart_DesktopApp/Registration.xaml
@@ -1,64 +1,159 @@
-﻿<Page x:Class="KwikMart_DesktopApp.Registration"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:KwikMart_DesktopApp" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Registration">
+﻿<Page
+    x:Class="KwikMart_DesktopApp.Registration"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:KwikMart_DesktopApp"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Registration"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="270"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="270"/>
+            <ColumnDefinition Width="270" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="270" />
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="3" Background="White">
 
-            <Button HorizontalAlignment="Right" Margin="10" BorderBrush="White" Background="White" Click="CloseUserProfile">
-                <materialDesign:PackIcon Kind="Close" Foreground="Black" />
+            <Button
+                Margin="10"
+                HorizontalAlignment="Right"
+                Background="White"
+                BorderBrush="White"
+                Click="CloseUserProfile">
+                <materialDesign:PackIcon Foreground="Black" Kind="Close" />
             </Button>
 
             <Grid Margin="0,-20,0,0">
 
-                <Rectangle  Width="260" Height="370" VerticalAlignment="Center" Margin="0,150" RadiusY="10" RadiusX="10" Fill="white">
+                <Rectangle
+                    Width="260"
+                    Height="370"
+                    Margin="0,150"
+                    VerticalAlignment="Center"
+                    Fill="white"
+                    RadiusX="10"
+                    RadiusY="10">
                     <Rectangle.Effect>
-                        <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
+                        <DropShadowEffect
+                            BlurRadius="15"
+                            Direction="0"
+                            RenderingBias="Quality"
+                            ShadowDepth="1"
+                            Color="#FFBBBBBB" />
                     </Rectangle.Effect>
                 </Rectangle>
 
-                <Grid VerticalAlignment="Top" Margin="35,150" Height="320">
+                <Grid
+                    Height="320"
+                    Margin="35,150"
+                    VerticalAlignment="Top">
 
-                    <StackPanel VerticalAlignment="Center" Margin="10, -50, 10, 15">
-                        <TextBox  Margin="0,5" materialDesign:HintAssist.Hint="Անուն Ազգանուն" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="12"/>
-                        <TextBox  Margin="0,5" materialDesign:HintAssist.Hint="Հեռախոսահամար" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="12"/>
-                        <TextBox  Margin="0,5" materialDesign:HintAssist.Hint="Մուտքանուն" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="12"/>
-                        <PasswordBox Margin="0,5" materialDesign:HintAssist.Hint="Գաղտնաբառ" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="12"/>
-                        <TextBox  Margin="0,5" materialDesign:HintAssist.Hint="Հասցե" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="12"/>
+                    <StackPanel Margin="10,-50,10,15" VerticalAlignment="Center">
+                        <TextBox
+                            Margin="0,5"
+                            materialDesign:HintAssist.Hint="Անուն Ազգանուն"
+                            FontFamily="Champagne &amp; Limousines"
+                            FontSize="12"
+                            Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                        <TextBox
+                            Margin="0,5"
+                            materialDesign:HintAssist.Hint="Հեռախոսահամար"
+                            FontFamily="Champagne &amp; Limousines"
+                            FontSize="12"
+                            Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                        <TextBox
+                            Margin="0,5"
+                            materialDesign:HintAssist.Hint="Մուտքանուն"
+                            FontFamily="Champagne &amp; Limousines"
+                            FontSize="12"
+                            Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                        <PasswordBox
+                            Margin="0,5"
+                            materialDesign:HintAssist.Hint="Գաղտնաբառ"
+                            FontFamily="Champagne &amp; Limousines"
+                            FontSize="12"
+                            Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" />
+                        <TextBox
+                            Margin="0,5"
+                            materialDesign:HintAssist.Hint="Հասցե"
+                            FontFamily="Champagne &amp; Limousines"
+                            FontSize="12"
+                            Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
                         <Grid>
-                            <materialDesign:PackIcon MouseDown="GetCurrentLocation" Width="20" Height="20" Kind="MapMarker" VerticalAlignment="Center" Foreground="#FF01BAFF"/>
-                            <Label Content= "Բացել քարտեզը հասցեն նշելու համար" HorizontalAlignment="Center" FontSize= "8" VerticalAlignment="Center" Margin= "20,5, 5, 5" Foreground="#707070"/>
+                            <materialDesign:PackIcon
+                                Width="20"
+                                Height="20"
+                                VerticalAlignment="Center"
+                                Foreground="#FF01BAFF"
+                                Kind="MapMarker"
+                                MouseDown="GetCurrentLocation" />
+                            <Label
+                                Margin="20,5,5,5"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Content="Բացել քարտեզը հասցեն նշելու համար"
+                                FontSize="8"
+                                Foreground="#707070" />
                         </Grid>
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Margin="10,275, 10, 0">
+                    <StackPanel Margin="10,275,10,0" Orientation="Horizontal">
 
-                        <Button HorizontalAlignment="Center" FontFamily="Impact" FontSize="18" Background="#FF3D56AC" BorderBrush="#FF3D56AC">
-                            <materialDesign:PackIcon Kind="Facebook" VerticalAlignment="Center" Foreground="White"/>
+                        <Button
+                            HorizontalAlignment="Center"
+                            Background="#FF3D56AC"
+                            BorderBrush="#FF3D56AC"
+                            FontFamily="Impact"
+                            FontSize="18">
+                            <materialDesign:PackIcon
+                                VerticalAlignment="Center"
+                                Foreground="White"
+                                Kind="Facebook" />
                         </Button>
-                        <Button HorizontalAlignment="Center" FontFamily="Impact" FontSize="18" Margin="15,0" Background="#FF01BAFF" BorderBrush="#FF01BAFF">
-                            <materialDesign:PackIcon Kind="Twitter" VerticalAlignment="Center" Foreground="White"/>
+                        <Button
+                            Margin="15,0"
+                            HorizontalAlignment="Center"
+                            Background="#FF01BAFF"
+                            BorderBrush="#FF01BAFF"
+                            FontFamily="Impact"
+                            FontSize="18">
+                            <materialDesign:PackIcon
+                                VerticalAlignment="Center"
+                                Foreground="White"
+                                Kind="Twitter" />
                         </Button>
-                        <Button HorizontalAlignment="Center" FontFamily="Impact" FontSize="18" Background="#FFE05959" BorderBrush="#FFE05959">
-                            <materialDesign:PackIcon Kind="GooglePlus" VerticalAlignment="Center" Foreground="White"/>
+                        <Button
+                            HorizontalAlignment="Center"
+                            Background="#FFE05959"
+                            BorderBrush="#FFE05959"
+                            FontFamily="Impact"
+                            FontSize="18">
+                            <materialDesign:PackIcon
+                                VerticalAlignment="Center"
+                                Foreground="White"
+                                Kind="GooglePlus" />
                         </Button>
                     </StackPanel>
                 </Grid>
 
-                <Button Width="150" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,100" Content="Շարունակել"/>
-                <Image Source="https://res.cloudinary.com/ysu/image/upload/v1621948445/AppImages/iconProgramm_qupxnj.png" Width="100" Height="100" VerticalAlignment="Top" Margin="30"/>
+                <Button
+                    Width="150"
+                    Margin="0,100"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom"
+                    Content="Շարունակել" />
+                <Image
+                    Width="100"
+                    Height="100"
+                    Margin="30"
+                    VerticalAlignment="Top"
+                    Source="https://res.cloudinary.com/ysu/image/upload/v1621948445/AppImages/iconProgramm_qupxnj.png" />
             </Grid>
         </StackPanel>
 
